--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.11", "3.12", "3.13"]
+        python-version: ["3.12", "3.13", "3.14"]
 
     steps:
     - name: Checkout code
@@ -31,29 +31,17 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        ./scripts/dev-env.sh --fresh --with-tests --with-web
 
-    - name: Run tests with coverage
+    - name: Run tests
       run: |
-        pytest tests/ -v --cov-report=xml || true
-      continue-on-error: true
-
-    - name: Upload coverage to Codecov
-      if: always()
-      uses: codecov/codecov-action@v4
-      with:
-        file: ./coverage.xml
-        flags: python-${{ matrix.python-version }}
-        name: coverage-py${{ matrix.python-version }}
-        token: ${{ secrets.CODECOV_TOKEN }}
-        fail_ci_if_error: false
+        . .venv/bin/activate
+        pytest tests/ -v
 
     - name: Test CLI entry points and package installation
       continue-on-error: true
       run: |
-        # Install package in editable mode
-        pip install -e . || echo "⚠️ Package installation failed"
+        . .venv/bin/activate
 
         # Test CLI entry points work
         edugain-analyze --help || echo "⚠️ edugain-analyze --help failed"
