--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,10 @@ platformdirs>=3.0.0
 
 # Development dependencies
 pytest>=7.4.0
-pytest-cov>=4.1.0
-pytest-xdist>=3.3.0
 ruff>=0.1.0
 pre-commit>=3.4.0
+
+# Optional extras (install on demand)
+# Coverage reporting: pip install -e .[coverage]
+# Parallel testing:   pip install -e .[parallel]
+# Full test tooling:  pip install -e .[tests]
