--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,14 +50,20 @@ jobs:
     - name: Test script functionality and runtime requirements
       continue-on-error: true
       run: |
-        # Test scripts work with development environment
-        python seccon_nosirtfi.py --help || echo "⚠️ seccon_nosirtfi.py --help failed"
-        python privacy_security_analysis.py --help || echo "⚠️ privacy_security_analysis.py --help failed"
+        # Sanity-check primary CLI entry points (run modules via src/ layout)
+        export PYTHONPATH=src:$PYTHONPATH
+        python analyze.py --help || echo "⚠️ analyze.py --help failed"
+        python -m edugain_analysis --help || echo "⚠️ python -m edugain_analysis --help failed"
+        python -m edugain_analysis.cli.main --help || echo "⚠️ edugain_analysis.cli.main --help failed"
+        python -m edugain_analysis.cli.seccon --help || echo "⚠️ edugain_analysis.cli.seccon --help failed"
+        python -m edugain_analysis.cli.sirtfi --help || echo "⚠️ edugain_analysis.cli.sirtfi --help failed"
+        python -m edugain_analysis.cli.broken_privacy --help || echo "⚠️ edugain_analysis.cli.broken_privacy --help failed"
         # Test runtime-only requirements (only on latest Python)
         if [ "${{ matrix.python-version }}" = "3.13" ]; then
           python -m venv /tmp/runtime_test || echo "⚠️ venv creation failed"
           source /tmp/runtime_test/bin/activate || echo "⚠️ venv activation failed"
           pip install -r requirements-runtime.txt || echo "⚠️ runtime requirements install failed"
-          python -c "import privacy_security_analysis; import seccon_nosirtfi; print('✅ Runtime requirements work')" || echo "⚠️ runtime import test failed"
+          pip install . || echo "⚠️ package install failed"
+          python -c "import edugain_analysis; print('✅ Runtime package import works')" || echo "⚠️ edugain_analysis import failed"
           deactivate || echo "⚠️ venv deactivation failed"
         fi
