--- a/.dockerignore
+++ b/.dockerignore
@@ -1,120 +1,15 @@
-# Git and version control
 .git
 .gitignore
-.gitattributes
-
-# CI/CD and workflows
 .github
-
-# Python
-__pycache__
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# Testing
-.pytest_cache/
-.coverage
-htmlcov/
-.tox/
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
-test-results.xml
-
-# Virtual environments
-.env
 .venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# IDEs and editors
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-.DS_Store
-
-# Documentation
-*.md
-!README.md
-!CLAUDE.md
-docs/
-
-# Reports and logs
-*.log
-*.log.*
+__pycache__
+.pytest_cache
+.ruff_cache
+htmlcov
 reports/
-bandit-report.json
-safety-report.json
-pip-audit-report.json
-sbom.json
-sbom.xml
-performance-report.md
-
-# Local development
-.pre-commit-config.yaml
-.flake8
-pyproject.toml
-.safety-policy.json
-
-# Docker
-Dockerfile.*
-docker-compose*.yml
-.dockerignore
-
-# Temporary files
-*.tmp
-*.temp
-.cache/
-.tmp/
-
-# OS generated files
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-$RECYCLE.BIN/
-
-# Archives
-*.zip
-*.tar.gz
-*.tar
-*.gz
-
-# IDE specific
-.spyderproject
-.spyproject
-.ropeproject
-.vscode
-.idea
-
-# Cloud settings
-.claude/
+*.pyc
+*.pyo
+*.pyd
+*.egg-info
+dist
+build
