--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.12", "3.13", "3.14"]
+        python-version: ["3.11", "3.12", "3.13", "3.14"]
 
     steps:
     - name: Checkout code
@@ -28,10 +28,11 @@ jobs:
         cache-dependency-path: |
           requirements.txt
           requirements-runtime.txt
+          pyproject.toml
 
     - name: Install dependencies
       run: |
-        ./scripts/dev-env.sh --fresh --with-tests
+        DEVENV_PYTHON=python${{ matrix.python-version }} ./scripts/dev-env.sh --fresh --with-tests
 
     - name: Prepare coverage directories
       run: mkdir -p reports
